@@ -13,4 +13,5 @@ group :development do
   gem "simplecov", "~> 0.11"
   gem "capture_stdout", "~> 0.0"
   gem "builtinextension", "~> 0.1"
+  gem "malge", "~> 0.0"
 end
