@@ -9,6 +9,7 @@ require 'tefil/textfilterbase'
 require 'tefil/calculator.rb'
 require 'tefil/columnformer'
 require 'tefil/columnanalyzer'
+require 'tefil/correlation.rb'
 require 'tefil/indentconverter'
 require 'tefil/indentstatistics'
 require 'tefil/statistics'
